k8s/qa/apps/test-capabilities/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mino-test-capabilities
  annotations:
    kubernetes.io/ingress.class: "nginx-external"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - secretName: mino-api-tls
      hosts: ["mino-api-staging.qa.us-east-1.dev.gen6bk.com", "mino-api-qa.dev.gen6bk.com"]
  rules:
    - host: mino-api-staging.qa.us-east-1.dev.gen6bk.com
      http:
        paths:
          - path: /test-capabilities
            backend:
              serviceName: mino-test-capabilities
              servicePort: https
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fnbo-simulator
  annotations:
    kubernetes.io/ingress.class: "nginx-external"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: mino-test-capabilities-basic-auth-ingress
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - secretName: mino-api-tls
      hosts: ["mino-api-staging.qa.us-east-1.dev.gen6bk.com", "mino-api-qa.dev.gen6bk.com"]
  rules:
    - host: mino-api-staging.qa.us-east-1.dev.gen6bk.com
      http:
        paths:
          - path: /fnbo-simulator
            backend:
              serviceName: mino-test-capabilities
              servicePort: https
